# mono

.github/workflows/: release.yml
api/src/pdc/services/policy/engine/policies/: 20210520_IDFM.html.ts  20210520_IDFM.ts  20240401_LannionTregor.html.ts  20250101_GrandChatellerault.html.ts
app-front/src/components/common/: SelectOperator.tsx
attestation/: package-lock.json  package.json
dbt/: dbt_project.yml  requirements.txt
dbt/macros/: _create_sql_statements_for_users_stats.yml  _get_final_acquisition_status_list.yml  _get_timezoned_timestamp.yml  get_final_acquisition_status_list.sql  get_timezoned_timestamp.sql
dbt/models/1_trusted_zone/: _trusted_journeys.yml  trusted_journeys.sql
dbt/models/dashboard/: _campaigns_by_day.yml  _campaigns_by_month.yml
dbt/models/metabase/: _interoperators_labels_by_month.yml
dbt/models/sources/: fraudcheck.yml
notebooks/analytics/campaigns/: .gitignore  README.md  emplacement-des-gares-idf.geojson  idfm.ipynb  pmgf.ipynb  pyproject.toml  traces-du-reseau-ferre-idf.geojson
public/: package-lock.json  package.json
sqlmesh/: .gitignore  config.yaml
sqlmesh/models/: test.py
