[project]
name = "campaigns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "branca>=0.8.1",
    "connectorx>=0.4.3",
    "duckdb>=1.3.2",
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "ipywidgets>=8.1.7",
    "jupysql>=0.11.1",
    "jupyterlab>=4.4.3",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-execute-time>=3.2.0",
    "jupyterlab-lsp>=5.1.1",
    "jupyterlab-notifications>=0.5.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "polars-h3>=0.5.6",
    "polars-st>=0.1.7",
    "psycopg>=3.2.9",
    "pyobsplot>=0.5.3.2",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.11.12",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "toml>=0.10.2",
    "wget>=3.2",
]
